# ImgPdfSquisher

./: .gitignore  .manga_compressor_defaults.json  bubble_segmenter.py  gui_app.py  manga_compressor.py  pyproject.toml  requirements.txt
assets/: devices.json
assets/previews/: README.txt
build-publish-scripts/: .SRCINFO  PKGBUILD  build-aur.sh  git-release.sh  push-aur.sh
build-publish-scripts/src/imgpdfsquisher-1.0.0/: .gitignore  .manga_compressor_defaults.json  PKGBUILD  gui_app.py  manga_compressor.py  presets.json
build-publish-scripts/src/imgpdfsquisher-1.0.0/build-publish-scripts/: PKGBUILD  build-aur.sh
build-publish-scripts/src/imgpdfsquisher-1.0.0/docs/: README.md
build-publish-scripts/src/imgpdfsquisher-1.0.0/i18n/: DE.json  EN.json  IT.json
build-publish-scripts/src/imgpdfsquisher-1.0.0/modules/: config.py  image_processor.py  memory_monitor.py  stats.py
docs/: LICENSE  README.md  release-notes.md
i18n/: AR.json  DE.json  EN.json  ES.json  FR.json  IT.json  JA.json  KO.json  PT.json  RU.json  ZH.json
modules/: __init__.py  config.py  pdf_extractor.py  system_optimizer.py  worker_functions.py
packaging/: imgpdfsquisher.desktop
